--- a/src/output.css
+++ b/src/output.css
@@ -1,6 +1,8 @@
 @layer tailwind-base, primereact, tailwind-utilities;
 
 @layer tailwind-base {
+  @import "primereact/resources/themes/lara-light-cyan/theme.css";
+
   /*
 ! tailwindcss v3.4.1 | MIT License | https://tailwindcss.com
 */
@@ -546,157 +548,151 @@ video {
     --tw-backdrop-saturate:  ;
     --tw-backdrop-sepia:  ;
   }
+
+  html {
+    font-family: "Proxima Nova", system-ui, sans-serif;
+  }
 }
 
 @layer tailwind-utilities {
-  .sr-only{
-    position: absolute;
-    width: 1px;
-    height: 1px;
-    padding: 0;
-    margin: -1px;
-    overflow: hidden;
-    clip: rect(0, 0, 0, 0);
-    white-space: nowrap;
-    border-width: 0;
+  @import "primereact/resources/themes/lara-light-cyan/theme.css";
+
+  .container{
+    width: 100%;
   }
 
-  .z-10{
-    z-index: 10;
+  @media (min-width: 640px){
+    .container{
+      max-width: 640px;
+    }
   }
 
-  .mx-auto{
-    margin-left: auto;
-    margin-right: auto;
+  @media (min-width: 768px){
+    .container{
+      max-width: 768px;
+    }
   }
 
-  .ml-4{
-    margin-left: 1rem;
+  @media (min-width: 1024px){
+    .container{
+      max-width: 1024px;
+    }
   }
 
-  .ms-2{
-    margin-inline-start: 0.5rem;
+  @media (min-width: 1280px){
+    .container{
+      max-width: 1280px;
+    }
   }
 
-  .ms-2\.5{
-    margin-inline-start: 0.625rem;
+  @media (min-width: 1536px){
+    .container{
+      max-width: 1536px;
+    }
   }
 
-  .mt-4{
-    margin-top: 1rem;
+  .visible{
+    visibility: visible;
+  }
+
+  .mb-3{
+    margin-bottom: 0.75rem;
+  }
+
+  .mb-4{
+    margin-bottom: 1rem;
+  }
+
+  .mt-10{
+    margin-top: 2.5rem;
+  }
+
+  .ml-3{
+    margin-left: 0.75rem;
   }
 
   .block{
     display: block;
   }
 
+  .inline-block{
+    display: inline-block;
+  }
+
   .flex{
     display: flex;
   }
 
-  .inline-flex{
-    display: inline-flex;
-  }
-
-  .hidden{
-    display: none;
+  .h-full{
+    height: 100%;
   }
 
   .h-10{
     height: 2.5rem;
   }
 
-  .h-2{
-    height: 0.5rem;
+  .h-16{
+    height: 4rem;
   }
 
-  .h-2\.5{
-    height: 0.625rem;
+  .h-6{
+    height: 1.5rem;
   }
 
-  .h-24{
-    height: 6rem;
+  .h-screen{
+    height: 100vh;
   }
 
-  .h-5{
-    height: 1.25rem;
+  .min-h-screen{
+    min-height: 100vh;
   }
 
-  .h-8{
-    height: 2rem;
-  }
-
-  .w-10{
-    width: 2.5rem;
-  }
-
-  .w-2{
-    width: 0.5rem;
-  }
-
-  .w-2\.5{
-    width: 0.625rem;
-  }
-
-  .w-44{
-    width: 11rem;
-  }
-
-  .w-5{
-    width: 1.25rem;
+  .w-64{
+    width: 16rem;
   }
 
   .w-full{
     width: 100%;
   }
 
-  .max-w-screen-xl{
-    max-width: 1280px;
+  .w-10{
+    width: 2.5rem;
+  }
+
+  .w-6{
+    width: 1.5rem;
+  }
+
+  .flex-1{
+    flex: 1 1 0%;
+  }
+
+  .shrink-0{
+    flex-shrink: 0;
   }
 
   .flex-col{
     flex-direction: column;
   }
 
-  .flex-wrap{
-    flex-wrap: wrap;
-  }
-
   .items-center{
     align-items: center;
-  }
-
-  .justify-center{
-    justify-content: center;
   }
 
   .justify-between{
     justify-content: space-between;
   }
 
-  .space-x-3 > :not([hidden]) ~ :not([hidden]){
+  .space-y-2 > :not([hidden]) ~ :not([hidden]){
+    --tw-space-y-reverse: 0;
+    margin-top: calc(0.5rem * calc(1 - var(--tw-space-y-reverse)));
+    margin-bottom: calc(0.5rem * var(--tw-space-y-reverse));
+  }
+
+  .space-x-4 > :not([hidden]) ~ :not([hidden]){
     --tw-space-x-reverse: 0;
-    margin-right: calc(0.75rem * var(--tw-space-x-reverse));
-    margin-left: calc(0.75rem * calc(1 - var(--tw-space-x-reverse)));
-  }
-
-  .divide-y > :not([hidden]) ~ :not([hidden]){
-    --tw-divide-y-reverse: 0;
-    border-top-width: calc(1px * calc(1 - var(--tw-divide-y-reverse)));
-    border-bottom-width: calc(1px * var(--tw-divide-y-reverse));
-  }
-
-  .divide-gray-100 > :not([hidden]) ~ :not([hidden]){
-    --tw-divide-opacity: 1;
-    border-color: rgb(243 244 246 / var(--tw-divide-opacity));
-  }
-
-  .self-center{
-    align-self: center;
-  }
-
-  .whitespace-nowrap{
-    white-space: nowrap;
+    margin-right: calc(1rem * var(--tw-space-x-reverse));
+    margin-left: calc(1rem * calc(1 - var(--tw-space-x-reverse)));
   }
 
   .rounded{
@@ -707,37 +703,13 @@ video {
     border-radius: 0.5rem;
   }
 
-  .border{
-    border-width: 1px;
+  .rounded-full{
+    border-radius: 9999px;
   }
 
-  .border-2{
-    border-width: 2px;
-  }
-
-  .border-gray-100{
-    --tw-border-opacity: 1;
-    border-color: rgb(243 244 246 / var(--tw-border-opacity));
-  }
-
-  .border-gray-200{
-    --tw-border-opacity: 1;
-    border-color: rgb(229 231 235 / var(--tw-border-opacity));
-  }
-
-  .border-gray-300{
-    --tw-border-opacity: 1;
-    border-color: rgb(209 213 219 / var(--tw-border-opacity));
-  }
-
-  .bg-blue-700{
+  .bg-gray-800{
     --tw-bg-opacity: 1;
-    background-color: rgb(29 78 216 / var(--tw-bg-opacity));
-  }
-
-  .bg-gray-50{
-    --tw-bg-opacity: 1;
-    background-color: rgb(249 250 251 / var(--tw-bg-opacity));
+    background-color: rgb(31 41 55 / var(--tw-bg-opacity));
   }
 
   .bg-white{
@@ -749,27 +721,17 @@ video {
     padding: 0.5rem;
   }
 
-  .p-3{
-    padding: 0.75rem;
+  .p-5{
+    padding: 1.25rem;
   }
 
-  .p-4{
-    padding: 1rem;
+  .p-10{
+    padding: 2.5rem;
   }
 
-  .px-3{
-    padding-left: 0.75rem;
-    padding-right: 0.75rem;
-  }
-
-  .px-4{
-    padding-left: 1rem;
-    padding-right: 1rem;
-  }
-
-  .py-1{
-    padding-top: 0.25rem;
-    padding-bottom: 0.25rem;
+  .px-5{
+    padding-left: 1.25rem;
+    padding-right: 1.25rem;
   }
 
   .py-2{
@@ -777,41 +739,41 @@ video {
     padding-bottom: 0.5rem;
   }
 
-  .text-2xl{
-    font-size: 1.5rem;
-    line-height: 2rem;
+  .px-6{
+    padding-left: 1.5rem;
+    padding-right: 1.5rem;
   }
 
-  .text-sm{
-    font-size: 0.875rem;
-    line-height: 1.25rem;
+  .text-xl{
+    font-size: 1.25rem;
+    line-height: 1.75rem;
   }
 
-  .font-medium{
-    font-weight: 500;
+  .text-base{
+    font-size: 1rem;
+    line-height: 1.5rem;
   }
 
-  .font-normal{
-    font-weight: 400;
+  .text-lg{
+    font-size: 1.125rem;
+    line-height: 1.75rem;
   }
 
   .font-semibold{
     font-weight: 600;
   }
 
-  .text-gray-500{
-    --tw-text-opacity: 1;
-    color: rgb(107 114 128 / var(--tw-text-opacity));
+  .font-normal{
+    font-weight: 400;
   }
 
-  .text-gray-700{
-    --tw-text-opacity: 1;
-    color: rgb(55 65 81 / var(--tw-text-opacity));
+  .uppercase{
+    text-transform: uppercase;
   }
 
-  .text-gray-900{
+  .text-gray-400{
     --tw-text-opacity: 1;
-    color: rgb(17 24 39 / var(--tw-text-opacity));
+    color: rgb(156 163 175 / var(--tw-text-opacity));
   }
 
   .text-white{
@@ -819,10 +781,19 @@ video {
     color: rgb(255 255 255 / var(--tw-text-opacity));
   }
 
-  .shadow{
-    --tw-shadow: 0 1px 3px 0 rgb(0 0 0 / 0.1), 0 1px 2px -1px rgb(0 0 0 / 0.1);
-    --tw-shadow-colored: 0 1px 3px 0 var(--tw-shadow-color), 0 1px 2px -1px var(--tw-shadow-color);
-    box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+  .text-gray-900{
+    --tw-text-opacity: 1;
+    color: rgb(17 24 39 / var(--tw-text-opacity));
+  }
+
+  .text-gray-600{
+    --tw-text-opacity: 1;
+    color: rgb(75 85 99 / var(--tw-text-opacity));
+  }
+
+  .text-gray-800{
+    --tw-text-opacity: 1;
+    color: rgb(31 41 55 / var(--tw-text-opacity));
   }
 
   .shadow-md{
@@ -832,9 +803,18 @@ video {
   }
 }
 
-.hover\:bg-gray-100:hover{
+@layer primereact {
+  @import "primereact/resources/themes/lara-light-cyan/theme.css";
+}
+
+.hover\:bg-gray-700:hover{
   --tw-bg-opacity: 1;
-  background-color: rgb(243 244 246 / var(--tw-bg-opacity));
+  background-color: rgb(55 65 81 / var(--tw-bg-opacity));
+}
+
+.focus\:text-gray-900:focus{
+  --tw-text-opacity: 1;
+  color: rgb(17 24 39 / var(--tw-text-opacity));
 }
 
 .focus\:outline-none:focus{
@@ -842,175 +822,9 @@ video {
   outline-offset: 2px;
 }
 
-.focus\:ring-2:focus{
-  --tw-ring-offset-shadow: var(--tw-ring-inset) 0 0 0 var(--tw-ring-offset-width) var(--tw-ring-offset-color);
-  --tw-ring-shadow: var(--tw-ring-inset) 0 0 0 calc(2px + var(--tw-ring-offset-width)) var(--tw-ring-color);
-  box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow, 0 0 #0000);
-}
-
-.focus\:ring-gray-200:focus{
-  --tw-ring-opacity: 1;
-  --tw-ring-color: rgb(229 231 235 / var(--tw-ring-opacity));
-}
-
-@media (min-width: 768px){
-  .md\:mt-0{
-    margin-top: 0px;
-  }
-
-  .md\:block{
-    display: block;
-  }
-
-  .md\:hidden{
-    display: none;
-  }
-
-  .md\:w-auto{
-    width: auto;
-  }
-
-  .md\:flex-row{
-    flex-direction: row;
-  }
-
-  .md\:space-x-8 > :not([hidden]) ~ :not([hidden]){
-    --tw-space-x-reverse: 0;
-    margin-right: calc(2rem * var(--tw-space-x-reverse));
-    margin-left: calc(2rem * calc(1 - var(--tw-space-x-reverse)));
-  }
-
-  .md\:border-0{
-    border-width: 0px;
-  }
-
-  .md\:bg-transparent{
-    background-color: transparent;
-  }
-
-  .md\:bg-white{
-    --tw-bg-opacity: 1;
-    background-color: rgb(255 255 255 / var(--tw-bg-opacity));
-  }
-
-  .md\:p-0{
-    padding: 0px;
-  }
-
-  .md\:text-blue-700{
-    --tw-text-opacity: 1;
-    color: rgb(29 78 216 / var(--tw-text-opacity));
-  }
-
-  .md\:hover\:bg-transparent:hover{
-    background-color: transparent;
-  }
-
-  .md\:hover\:text-blue-700:hover{
-    --tw-text-opacity: 1;
-    color: rgb(29 78 216 / var(--tw-text-opacity));
-  }
-}
-
-.rtl\:space-x-reverse:where([dir="rtl"], [dir="rtl"] *) > :not([hidden]) ~ :not([hidden]){
-  --tw-space-x-reverse: 1;
-}
-
 @media (prefers-color-scheme: dark){
-  .dark\:divide-gray-600 > :not([hidden]) ~ :not([hidden]){
-    --tw-divide-opacity: 1;
-    border-color: rgb(75 85 99 / var(--tw-divide-opacity));
-  }
-
-  .dark\:border-gray-700{
-    --tw-border-opacity: 1;
-    border-color: rgb(55 65 81 / var(--tw-border-opacity));
-  }
-
-  .dark\:bg-blue-600{
-    --tw-bg-opacity: 1;
-    background-color: rgb(37 99 235 / var(--tw-bg-opacity));
-  }
-
-  .dark\:bg-gray-700{
-    --tw-bg-opacity: 1;
-    background-color: rgb(55 65 81 / var(--tw-bg-opacity));
-  }
-
-  .dark\:bg-gray-800{
-    --tw-bg-opacity: 1;
-    background-color: rgb(31 41 55 / var(--tw-bg-opacity));
-  }
-
-  .dark\:bg-gray-900{
-    --tw-bg-opacity: 1;
-    background-color: rgb(17 24 39 / var(--tw-bg-opacity));
-  }
-
-  .dark\:text-gray-200{
-    --tw-text-opacity: 1;
-    color: rgb(229 231 235 / var(--tw-text-opacity));
-  }
-
-  .dark\:text-gray-400{
-    --tw-text-opacity: 1;
-    color: rgb(156 163 175 / var(--tw-text-opacity));
-  }
-
   .dark\:text-white{
     --tw-text-opacity: 1;
     color: rgb(255 255 255 / var(--tw-text-opacity));
-  }
-
-  .dark\:hover\:bg-gray-600:hover{
-    --tw-bg-opacity: 1;
-    background-color: rgb(75 85 99 / var(--tw-bg-opacity));
-  }
-
-  .dark\:hover\:bg-gray-700:hover{
-    --tw-bg-opacity: 1;
-    background-color: rgb(55 65 81 / var(--tw-bg-opacity));
-  }
-
-  .dark\:hover\:text-white:hover{
-    --tw-text-opacity: 1;
-    color: rgb(255 255 255 / var(--tw-text-opacity));
-  }
-
-  .dark\:focus\:text-white:focus{
-    --tw-text-opacity: 1;
-    color: rgb(255 255 255 / var(--tw-text-opacity));
-  }
-
-  .dark\:focus\:ring-gray-600:focus{
-    --tw-ring-opacity: 1;
-    --tw-ring-color: rgb(75 85 99 / var(--tw-ring-opacity));
-  }
-}
-
-@media (min-width: 768px){
-  @media (prefers-color-scheme: dark){
-    .md\:dark\:bg-gray-900{
-      --tw-bg-opacity: 1;
-      background-color: rgb(17 24 39 / var(--tw-bg-opacity));
-    }
-
-    .md\:dark\:bg-transparent{
-      background-color: transparent;
-    }
-
-    .md\:dark\:text-blue-500{
-      --tw-text-opacity: 1;
-      color: rgb(59 130 246 / var(--tw-text-opacity));
-    }
-
-    .md\:dark\:hover\:bg-transparent:hover{
-      background-color: transparent;
-    }
-
-    .md\:dark\:hover\:text-blue-500:hover{
-      --tw-text-opacity: 1;
-      color: rgb(59 130 246 / var(--tw-text-opacity));
-    }
   }
 }
